infra/kubernetes/lionwiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lionwiki
  labels:
    app: lionwiki
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: lionwiki
